--- a/index.html
+++ b/index.html
@@ -1,45 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="stylesheet" type="text/css" href="styles.css">
+
   <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  
+<div class="all">
+  <div class="header">
+
+
   Reliable, efficient delivery
   Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
+  Our Artificial Intelligence powered tools use millions of project data points
   to ensure that your project is successful
+</div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+  <div class="card supervisor">
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+    Supervisor
+    Monitors activity to identify project roadblocks
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+  </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  <div class="card team-builder">
 
-  
+    Team Builder
+    Scans our talent network to create the optimal team for your project
+  </div>
+
+  <div class="card karma">
+    Karma
+    Regularly evaluates our talent to ensure quality
+
+  </div>
+
+  <div class="card calculator">
+
+    Calculator
+    Uses data from past projects to provide better delivery estimates
+  </div>
+
+
+  </div>
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Amber L Baker</a>.
     </p>
   </footer>
 </body>
+
 </html>
